gitops-main/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: denartcc/api:fe44c92
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        command: ["/app/api"]
        args:
          - server
          - --config
          - /etc/zdv-api/config.yaml
        volumeMounts:
        - name: config
          mountPath: /etc/zdv-api
        - name: email-templates
          mountPath: /app/templates
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 512Mi
      volumes:
      - name: config
        emptyDir: {}
      - name: config-map
        configMap:
          name: api-config
      - name: email-templates
        configMap:
          name: email-templates
